# rag-research-brief-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/tests/: test_health.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/components/: BriefView.test.tsx  BriefView.tsx  NavBar.test.tsx  NavBar.tsx  SearchScreen.test.tsx  SearchScreen.tsx  SourcesSidebar.test.tsx  SourcesSidebar.tsx
frontend/src/mocks/: brief.ts
