[project]
name = "briefly-backend"
version = "0.1.0"
description = "FastAPI backend for Briefly, a RAG-based research brief assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["app", "tests"]
exclude = [
    ".venv",
]